--- a/index.html
+++ b/index.html
@@ -5,32 +5,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
-    <title>Home — @jglypt</title>
-    <meta name="description" content="an amazing website made by @jglypt (Jack)">
-    <meta name="keywords" content="website, Jack, @jglypt">
-    <meta name="author" content="Jack">
-    <meta name="twitter:card" content="jack / Jack's amazing website">
-    <meta name="twitter:site" content="@jglypt">
+    <title>Home — actuallyaridan</title>
+    <meta name="description" content="an amazing website made by actuallyaridan (adnan bukvic)">
+    <meta name="keywords" content="website, adnan bukvic, actuallyaridan">
+    <meta name="author" content="Adnan Bukvic">
+    <meta name="twitter:card" content="aridan / adnan bukvic's amazing website">
+    <meta name="twitter:site" content="actuallyaridan">
     <meta name="twitter:title" content="Home">
     <meta name="twitter:image" content="">
-    <meta name="twitter:description" content="jack / Jack's amazing website">
+    <meta name="twitter:description" content="aridan / adnan bukvic's amazing website">
     <meta property="og:title" content="Home">
-    <meta property="og:description" content="jack / Jack's amazing website">
+    <meta property="og:description" content="aridan / adnan bukvic's amazing website">
     <meta property="og:image" content="">
-    <meta property="og:url" content="https://jglypt.co.uk">
+    <meta property="og:url" content="https://aridan.net">
     <link href="/src/styles/styles.css" rel="stylesheet">
     <script src="/src/scripts/settings.js"></script>
     <script src="/src/scripts/dropDownMenu.js"></script>
     <script src="/src/scripts/mobileMenu.js"></script>
+    <script defer src="/src/scripts/landyard.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
     <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
     <link rel="manifest" href="/src/favicons/site.webmanifest">
-    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="/src/scripts/twimojiFix.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
 
@@ -43,8 +41,16 @@
                             src="/src/images/emojis/house.svg"> Home</a>
                 </li>
                 <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 </li>
                 <li>
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
@@ -57,7 +63,7 @@
             </menu>
             <menu class="navWrapperMobile">
                 <li>
-                    <a class="navButton activeChoice" href="/">jack.co.uk</a>
+                    <a class="navButton activeChoice" href="/">aridan.net</a>
                 </li>
                 <li>
                     <button onclick="toggleMenu()" type="button" class="navButton right-link">
@@ -68,8 +74,16 @@
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 </li>
                 <li>
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
@@ -87,24 +101,26 @@
         <div>
             <div class="centererWrapper">
                 <section class="titleUnderText">
-                    <p class="subTitle">Hey! I am Jack! (@jglypt on X) </p>
+                    <p class="subTitle">Hi there! Welcome to my website! I use this website mainly to show
+                        recruiters my skills
+                        and contact information.I hope you'll enjoy your stay here. I'd give you some
+                        cookies but I respect your privacy, so maybe another time?</p>
                 </section>
                 <p class="subTitleExp">About me</p>
                 <section class="project" id="bio">
-                   <h2 class="projectName">Jack, also known as @jglypt. 
-                   </h2>
-                    <p class="projectDesc"> Extra info:  Taking my GCSEs 
-                        in the Channel Islands.
-                         Interested in Guitar, 
-                       Tech hardware & 
-                        software, and Linux.</p>
+                   <h2 class="projectName">Adnan Bukvic, also known as @actuallyaridan</h2>
+                    <p class="projectDesc">I'm a creative guy that loves making new solutions to old
+                        things. I love learning new things and I've liked computers, phones and
+                        networking ever since I was a child. I'm always up-to-date about their software
+                        and hardware. I even like modifying electronics to do new things, like old
+                        cables and accessories like iPods and I know a bunch of languages too!</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/clock.svg"><br>I am 15 years old</p>
+                                src="/src/images/emojis/clock.svg"><br>19 years old</p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span>
-                            English
-                            <span class="langProf"><br>speaks:</span> Spanish (a tad bit)
+                            Swedish, English
+                            <span class="langProf"><br>speaks:</span> Bosnian, Croatian, Serbian
                         </p>
                     </div>
                 </section>
@@ -113,31 +129,74 @@
                     <p class="projectDesc">I own a bunch of different tech. Here are my most important ones:</p>
                     <div class="projectStuff">
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/phone.svg"><br><span class="langProf">Phone:<br></span>iPhone SE (2020), Black, 64GB
-                            </p>
+                                src="/src/images/emojis/phone.svg"><br><span class="langProf">Phone:<br></span>iPhone 15
+                            Pro</p>
                         <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/laptop.svg"><br><span class="langProf">Laptop:<br></span>Crappy Lenovo thing 
-                            <br>(15", 2022, <br>AMD Radeon 3020e, 8GB/256GB)</p>
+                                src="/src/images/emojis/laptop.svg"><br><span class="langProf">Laptop:<br></span>MacBook
+                            Air<br>(13", 2020, <br>M1, 8GB/256GB)</p>
                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                 src="/src/images/emojis/computer.svg"><br><span class="langProf">Computer:<br></span>
-                            Mac Mini (2023)<br>M2 <br>8GB RAM<br>macOS
+                            AMD Ryzen 5 3600<br>ASUS Radeon RX6700 XT OC Edition <br>16GB RAM<br>Windows 11, macOS
                             Sonoma
-                            <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                src="/src/images/emojis/watch.svg"><br><span class="langProf">Watch:<br></span>Apple Watch SE 2022 <br> 
-                                - Midnight Blue
-                            </p>
                         </p>
+                    </div>
+                </section>
+                <section class="project" id="currentdiscord">
+                    <aside id="dcNameContainer">
+                       <h2 class="projectName" id="dcActivityHeaderName">Discord activity</h2>
+                        <p id="statusWrapper" class="dcloading">Loading</p>
+                    </aside>
+                    <div id="landyardDiscord">
+                        <div id="loading">
+                            <div>
+                                <div id="loadingSpinner" class="lds-ring">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
+                            </div>
+                            <p id="errorMessage">An error occurred.<br>Please try again later.</p>
+                        </div>
+                        <div id="loadedLandyard">
+                            <div id="discord">
+                                <div id="discordInfo" class="discordInfo">
+                                    <img id="discordPFP" class="discordPFP" draggable="false" width="128"
+                                    height="128" alt="" src="src/images/icons/spinner.gif">
+                                    <p id="discordName">Loading</p>
+                                </div>
+                                <hr class="divider">
+                                <div id="discordActivity">
+                                    <div id="discordActivityImages">
+                                        <img id="activityLogoLarge" draggable="false" width="96" height="96" alt=""
+                                            src="src/images/icons/spinner.gif">
+                                        <img id="activityLogoSmall" draggable="false" width="32" height="32" alt=""
+                                            src="src/images/icons/spinner.gif">
+                                    </div>
+                                    <div id="discordActivityInfo">
+                                        <h3 id="activityName">Loading</h3>
+                                        <p id="activityDetails">Loading</p>
+                                        <p id="activityState" class="subTitle">Loading</p>
+                                        <div id="timeremaning">
+                                            <p id="activityTime" class="subTitle">00:00</p>
+                                            <p id="remaining" class="hide subTitle"> remaining</p>
+                                            <p id="elapsed" class="hide subTitle"> elapsed</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
         </div>
     </main>
-    <footer class="footer">          
-        <p>Any copyrighted material (as in application icons or similar) displayed on this website is
+    <footer class="footer">
+        <p>Any copyrighted material (as in album art, application icons or similar) displayed on this website is
             owned by their respective copyright holder. <br>No images are stored directly on this website. No
-            copyright infringement is intended. <br>Contact jack@jglypt.co.uk for takedowns of copyrighted material.
+            copyright infringement is intended. <br>Contact adnan@aridan.net for takedowns of copyrighted material.
         </p>
-        <p>© Copyright 2024 by Jack Gilbert unless stated otherwise. This project uses the MIT license.</p>
+        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
