--- a/settings.html
+++ b/settings.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
@@ -29,8 +28,16 @@
                             src="/src/images/emojis/house.svg"> Home</a>
                 </li>
                 <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 </li>
                 <li>
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
@@ -54,8 +61,16 @@
             </menu>
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/game.svg"> Minecraft</a>
                 </li>
                 <li>
                     <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
@@ -71,30 +86,55 @@
     <main class="settings">
         <h1>Settings</h1>
         <form id="settings" action="/src/scripts/settings.js">
-            <section class="settingGroup" id="appearance">
-                <h2>Appearance Settings</h2>
+            <section class="settingGroup" id="content">
+                <p>Content that you see</p>
                 <div class="setting">
-                    <h3>Theme</h3>
-                    <div class="theme-selector">
-                        <input type="radio" id="auto" name="theme-color" value="auto">
-                        <label for="auto" class="button">Follow System</label>
-                        <input type="radio" id="light" name="theme-color" value="light">
-                        <label for="light" class="button">Light</label>
-                        <input type="radio" id="dark" name="theme-color" value="dark" checked>
-                        <label for="dark" class="button">Dark</label>
-                    </div>
-                </div>
-                <div class="setting">
-                    <h3>Accent Color</h3>
-                    <div class="color-selector">
-                        <!-- You can add or remove colors as desired -->
-                        <input type="radio" id="primary-red" name="accent-color" value="204, 0, 0" checked>
-                        <label for="primary-red" class="button red">Primary Red</label>
-                        <!-- Add more options similarly -->
-                    </div>
+                    <ul>
+                        <li>
+                            <p><label for="language-select">Language</label></p>
+                            <div>
+                                <select class="button" id="language-select">
+                                    <option value="en" selected>English</option>
+                                    <option value="sv">Svenska</option>
+                                  </select>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </section>
-        </form>        
+            <section class="settingGroup" id="appearance">
+                <p>Appearance</p>
+                <div class="setting">
+                    <ul>
+                        <li>
+                            <p>Theme (does not work)</p>
+                            <div>
+                                <input type="radio" id="auto" name="theme-color" value="auto">
+                                <label for="auto" class="auto button">Follow system</label>
+                                <input type="radio" id="light" name="theme-color" value="light">
+                                <label for="light" class="light button">Light</label>
+                                <input type="radio" id="dark" name="theme-color" value="dark" checked>
+                                <label for="dark" class="dark button">Dark</label>
+                            </div>
+                        </li>
+                        <li>
+                            <p>Color</p>
+                            <div>
+                                <input type="radio" id="purple" name="accent-color" value="113, 10, 151" checked>
+                                <label for="purple" class="purple button">Purple</label>
+                                <input type="radio" id="red" name="accent-color" value="151, 10, 10">
+                                <label for="red" class="red button">Red</label>
+                                <input type="radio" id="green" name="accent-color" value="10, 151, 33">
+                                <label for="green" class="green button">Green</label>
+                                <input type="radio" id="blue" name="accent-color" value="10, 66, 151">
+                                <label for="blue" class="blue button">Blue</label>
+                                <input type="radio" id="orange" name="accent-color" value="151, 78, 10">
+                                <label for="orange" class="orange button">Orange</label>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
             <section class="settingGroup" id="accessibility">
                 <p>Accessibility</p>
                 <div class="setting">
@@ -142,7 +182,7 @@
     </main>
     <footer class="footer">
         <p>Version 1.3a (released 2024-04-02)</p>
-        <p>© Copyright 2024 by Jack Gilbert unless stated otherwise. This project uses the MIT license.</p>
+        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
