--- a/settings.html
+++ b/settings.html
@@ -44,8 +44,8 @@
                             src="/src/images/emojis/speak.svg"> Contact</a>
                 </li>
                 <li>
-                    <a class="navButton right-link activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/setttings.svg"> Settings</a>
+                    <a class="navButton right-link activeChoice" href="settings"><img draggable="false" class="emoji"
+                            alt="" src="/src/images/emojis/setttings.svg"> Settings</a>
                 </li>
             </menu>
             <menu class="navWrapperMobile">
@@ -96,7 +96,7 @@
                                 <select class="button" id="language-select">
                                     <option value="en" selected>English</option>
                                     <option value="sv">Svenska</option>
-                                  </select>
+                                </select>
                             </div>
                         </li>
                     </ul>
@@ -152,7 +152,8 @@
                             <p><label for="update-every-sec">Update activity automatically</label></p>
                             <div>
                                 <label class="switch">
-                                    <input type="checkbox" id="update-every-sec" name="update-every-sec" value="true" checked>
+                                    <input type="checkbox" id="update-every-sec" name="update-every-sec" value="true"
+                                        checked>
                                     <span class="slider round"></span>
                                 </label>
                             </div>
@@ -167,7 +168,7 @@
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
                             Failed to save settings. Try again.
                         </div>
-            
+
                         <div id="sucessfullSave" class="savedMessage sucessfull">
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
                             Settings saved successfully! Refresh to apply.
@@ -181,7 +182,7 @@
         </form>
     </main>
     <footer class="footer">
-        <p>Version 1.3a (released 2024-04-02)</p>
+        <p>Version 1.5 (released 2024-04-13)</p>
         <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
