--- a/sv/settings.html
+++ b/sv/settings.html
@@ -42,8 +42,8 @@
                             src="/src/images/emojis/speak.svg"> Kontakt</a>
                 </li>
                 <li>
-                    <a class="navButton right-link activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                    <a class="navButton right-link activeChoice" href="settings"><img draggable="false" class="emoji"
+                            alt="" src="/src/images/emojis/setttings.svg"> Inställningar</a>
                 </li>
             </menu>
             <menu class="navWrapperMobile">
@@ -90,7 +90,7 @@
                                 <select class="button" id="language-select">
                                     <option value="sv" selected>Svenska</option>
                                     <option value="en">English</option>
-                                  </select>
+                                </select>
                             </div>
                         </li>
                     </ul>
@@ -146,7 +146,8 @@
                             <p><label for="update-every-sec">Uppdatera aktivitet automatiskt</label></p>
                             <div>
                                 <label class="switch">
-                                    <input type="checkbox" id="update-every-sec" name="update-every-sec" value="true" checked>
+                                    <input type="checkbox" id="update-every-sec" name="update-every-sec" value="true"
+                                        checked>
                                     <span class="slider round"></span>
                                 </label>
                             </div>
@@ -161,7 +162,7 @@
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
                             Dina inställningar kunde inte sparas. Försök igen.
                         </div>
-            
+
                         <div id="sucessfullSave" class="savedMessage sucessfull">
                             <span class="closebtn" onclick="settingsAlert()">&#x2715;</span>
                             Dina inställningar sparades! Ladda om för att verkställa.
@@ -175,8 +176,8 @@
         </form>
     </main>
     <footer class="footer">
-            <p>Version 1.3a (släppt 2024-04-02)</p>
-            <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
-            <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
+        <p>Version 1.5 (släppt 2024-04-13)</p>
+        <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
+        <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
 </body>
