--- a/sv/index.html
+++ b/sv/index.html
@@ -13,7 +13,7 @@
     <script src="/src/scripts/dropDownMenu.js"></script>
     <script src="/src/scripts/mobileMenu.js"></script>
     <script src="/src/scripts/emailModalBox.js"></script>
-    <script defer src="/src/scripts/landyard-sv-se.js"></script>
+    <script defer src="/src/scripts/lanyard-sv-se.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/src/favicons/icon-512.png">
     <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/src/favicons/icon-192.png">
@@ -110,10 +110,10 @@
                     </div>
                 </section>
                 <section class="project">
-                    <span id="dcNameContainer">
+                    <aside id="dcNameContainer">
                        <h2 class="projectName" id="dcActivityHeaderName">Discord-aktivitet</h2>
                         <p id="statusWrapper" class="dcloading">Laddar</p>
-                    </span>
+                    </aside>
                     <div id="landyardDiscord">
                         <div id="loading">
                             <div>
@@ -129,9 +129,9 @@
                         <div id="loadedLandyard">
                             <div id="discord">
                                 <div id="discordInfo" class="discordInfo">
-                                    <p id="discordName">actuallyaridan</p>
                                     <img id="discordPFP" class="discordPFP" draggable="false" width="128"
                                         height="128" alt="" src="/src/images/icons/spinner.gif">
+                                        <p id="discordName">Laddar</p>
                                 </div>
                                 <hr class="divider">
                                 <div id="discordActivity">
