--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
     </main>
     <footer class="footer">
         <p>Any copyrighted material (as in album art, application icons or similar) displayed on this website is
-            owned by their respective copyright holder. <br>No images are stored directly on this website. No
-            copyright infringement is intended. <br>Contact adnan@aridan.net for takedowns of copyrighted material.
+            owned by their respective copyright holder. <br>No images are stored directly on this website.<br>Contact adnan@aridan.net for takedowns of copyrighted material.
         </p>
         <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
