--- a/sv/index.html
+++ b/sv/index.html
@@ -159,8 +159,7 @@
     </main>
     <footer class="footer">
         <p>Allt upphovsrättsskyddat material (som albumomslag, applikationsikoner och dylikt) som visas på den här
-            sidan ägs av respektive upphovsrättsinnehavare. <br>Inga bilder lagras direkt på denna webbplats.
-            Intrång i upphovsrätt ej avsedd. <br>Kontakta adnan@aridan.net för att ta ned upphovsrättsskyddat
+            sidan ägs av respektive upphovsrättsinnehavare. <br>Inga bilder lagras direkt på denna webbplats.<br>Kontakta adnan@aridan.net för att ta ned upphovsrättsskyddat
             material.</p>
         <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
         <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
