No longer sharing album arts

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
     </main>
     <footer class="footer">
-        <p>Any copyrighted material (as in album art, application icons or similar) displayed on this website is
+        <p>Any copyrighted material (like application icons or similar) displayed on this website is
             owned by their respective copyright holder. <br>No images are stored directly on this website.<br>Contact adnan@aridan.net for takedowns of copyrighted material.
         </p>
         <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
