--- a/sv/index.html
+++ b/sv/index.html
@@ -158,7 +158,7 @@
         </div>
     </main>
     <footer class="footer">
-        <p>Allt upphovsrättsskyddat material (som albumomslag, applikationsikoner och dylikt) som visas på den här
+        <p>Allt upphovsrättsskyddat material (som applikationsikoner och dylikt) som visas på den här
             sidan ägs av respektive upphovsrättsinnehavare. <br>Inga bilder lagras direkt på denna webbplats.<br>Kontakta adnan@aridan.net för att ta ned upphovsrättsskyddat
             material.</p>
         <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
