--- a/settings.html
+++ b/settings.html
@@ -109,12 +109,15 @@
                         <li>
                             <p>Theme (does not work)</p>
                             <div>
-                                <input type="radio" id="auto" name="theme-color" value="auto">
-                                <label for="auto" class="auto button">Follow system</label>
-                                <input type="radio" id="light" name="theme-color" value="light">
-                                <label for="light" class="light button">Light</label>
-                                <input type="radio" id="dark" name="theme-color" value="dark" checked>
-                                <label for="dark" class="dark button">Dark</label>
+                                <input type="radio" id="auto" name="theme-color" value="auto" class="theme-option">
+                                <label for="auto" class="auto button theme-label">Follow system</label>
+
+                                <input type="radio" id="light" name="theme-color" value="light" class="theme-option">
+                                <label for="light" class="light button theme-label">Light</label>
+
+                                <input type="radio" id="dark" name="theme-color" value="dark" checked
+                                    class="theme-option">
+                                <label for="dark" class="dark button theme-label">Dark</label>
                             </div>
                         </li>
                         <li>
@@ -122,12 +125,16 @@
                             <div>
                                 <input type="radio" id="purple" name="accent-color" value="113, 10, 151" checked>
                                 <label for="purple" class="purple button">Purple</label>
+
                                 <input type="radio" id="red" name="accent-color" value="151, 10, 10">
                                 <label for="red" class="red button">Red</label>
+
                                 <input type="radio" id="green" name="accent-color" value="10, 151, 33">
                                 <label for="green" class="green button">Green</label>
+
                                 <input type="radio" id="blue" name="accent-color" value="10, 66, 151">
                                 <label for="blue" class="blue button">Blue</label>
+
                                 <input type="radio" id="orange" name="accent-color" value="151, 78, 10">
                                 <label for="orange" class="orange button">Orange</label>
                             </div>
