--- a/settings.html
+++ b/settings.html
@@ -109,14 +109,13 @@
                         <li>
                             <p>Theme (does not work)</p>
                             <div>
-                                <input type="radio" id="auto" name="theme-color" value="auto" class="theme-option">
+                                <input type="radio" id="auto" name="theme-color" value="auto" class="theme-option" checked>
                                 <label for="auto" class="auto button theme-label">Follow system</label>
 
                                 <input type="radio" id="light" name="theme-color" value="light" class="theme-option">
                                 <label for="light" class="light button theme-label">Light</label>
 
-                                <input type="radio" id="dark" name="theme-color" value="dark" checked
-                                    class="theme-option">
+                                <input type="radio" id="dark" name="theme-color" value="dark" class="theme-option">
                                 <label for="dark" class="dark button theme-label">Dark</label>
                             </div>
                         </li>
