--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
                         </p>
                     </div>
                 </section>
+                <section class="project">
+                    <h2 class="projectName">Eurovision 2024</h2>
+                    <p class="projectDesc">Check out my ranknings for this years Eurovision Song Contest!</p>
+                    <div class="projectStuff">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Uto5mZV2R9M?si=yoiUxjK-7FC3PnBi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </section>
                 <section class="project" id="currentdiscord">
                     <aside id="dcNameContainer">
                        <h2 class="projectName" id="dcActivityHeaderName">Discord activity</h2>
