no more does not work

--- a/settings.html
+++ b/settings.html
@@ -107,7 +107,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Theme (does not work)</p>
+                            <p>Theme</p>
                             <div>
                                 <input type="radio" id="auto" name="theme-color" value="auto" class="theme-option" checked>
                                 <label for="auto" class="auto button theme-label">Follow system</label>
