--- a/sv/settings.html
+++ b/sv/settings.html
@@ -101,7 +101,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Tema (fungerar inte)</p>
+                            <p>Tema</p>
                             <div>
                                 <input type="radio" id="auto" name="theme-color" value="auto">
                                 <label for="auto" class="auto button">Följ systemet</label>
