improved light mode

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                         you!</p>
                 </section>
                 <section class="socialMedias project">
-                    <button onclick="emailToggle()" type="button" class="socialMedia email">Show email
+                    <button onclick="emailToggle()" type="button" class="socialMedia red">Show email
                         address</button>
 
                     <a class="socialMedia imessage" href="sms:adnan@aridan.net">Send an iMessage</a>
