--- a/experiences.html
+++ b/experiences.html
@@ -101,7 +101,7 @@
                 </section>
                 <section class="centerer">
                     <div class="centererItems">
-                        <a class="cvButton"
+                        <a class="socialMedia light"
                             href="contact">Request CV/resume</a>
                         <a rel="noopener" class="socialMedia linkedin"
                             href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/" target="_blank">LinkedIn</a>
