--- a/sv/contact.html
+++ b/sv/contact.html
@@ -101,7 +101,7 @@
                         mig, jag bits inte! Jag svarar mer än gärna och jag ser fram emot att prata med dig!</p>
                 </section>
                 <section class="socialMedias project">
-                    <button type="button" onclick="emailToggle()" class="socialMedia email">Visa e-post adress</button>
+                    <button type="button" onclick="emailToggle()" class="socialMedia red">Visa e-post adress</button>
                     <a class="socialMedia imessage" href="sms:adnan@aridan.net">Skicka ett iMessage</a>
                 </section>
                 <section>
