--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -91,7 +91,7 @@
                 </section>
                 <section class="centerer">
                     <div class="centererItems">
-                        <a href="cv" class="cvButton">Begär CV</a>
+                        <a href="/sv/contact" class="socialMedia light">Begär CV</a>
                         <a rel="noopener" class="socialMedia linkedin"
                             href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/" target="_blank">LinkedIn</a>
                     </div>
