added uppercase font option

--- a/experiences.html
+++ b/experiences.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#161616">
-    <title>Experiences — actuallyaridan</title>
+    <title>Experience — actuallyaridan</title>
     <meta name="description" content="All of actuallyaridan (Adnan Bukvic)'s work and school experience on one page">
     <meta name="keywords" content="experience, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
@@ -33,7 +33,7 @@
                 </li>
                 <li>
                     <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                            src="/src/images/emojis/brain.svg"> Experience</a>
                 </li>
                 <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
@@ -66,7 +66,7 @@
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
                     <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                            src="/src/images/emojis/brain.svg"> Experience</a>
                 </li>
                 <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
@@ -88,7 +88,7 @@
         </nav>
     </header>
     <main>
-        <h1>Experiences</h1>
+        <h1>Experience</h1>
         <div>
             <div class="centererWrapper">
                 <section class="titleUnderText">
