--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
                 </li>
                 <li>
                     <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                            src="/src/images/emojis/brain.svg"> Experience</a>
                 </li>
                 <li>
                     <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
@@ -64,7 +64,7 @@
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
                     <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                            src="/src/images/emojis/brain.svg"> Experience</a>
                 </li>
                 <li>
                     <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
