--- a/sv/settings.html
+++ b/sv/settings.html
@@ -152,6 +152,15 @@
                                 </label>
                             </div>
                         </li>
+                        <li>
+                            <p class="uppercaseTextLabel"><label for="uppercase">Använd endast kapitäl text</label></p>
+                            <div>
+                                <label class="switch">
+                                    <input type="checkbox" id="uppercase" name="uppercase" value="true">
+                                    <span class="slider round"></span>
+                                </label>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -176,7 +185,7 @@
         </form>
     </main>
     <footer class="footer">
-        <p>Version 1.5 (släppt 2024-04-13)</p>
+        <p>Version 2.0 (släppt 2024-05-08)</p>
         <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
         <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
