--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                     <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                            src="/src/images/emojis/brain.svg"> Experience</a>
                 </li>
                 <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
@@ -75,7 +75,7 @@
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
                     <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                            src="/src/images/emojis/brain.svg"> Experience</a>
                 </li>
                 <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
