--- a/settings.html
+++ b/settings.html
@@ -29,7 +29,7 @@
                 </li>
                 <li>
                     <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                            src="/src/images/emojis/brain.svg"> Experience</a>
                 </li>
                 <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
@@ -62,7 +62,7 @@
             <menu class="mobileMenu" id="mobileMenuID">
                 <li>
                     <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                            src="/src/images/emojis/brain.svg"> Experience</a>
                 </li>
                 <li>
                     <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
@@ -164,6 +164,15 @@
                                 </label>
                             </div>
                         </li>
+                        <li>
+                            <p class="uppercaseTextLabel"><label for="uppercase">Use only uppercase fonts</label></p>
+                            <div>
+                                <label class="switch">
+                                    <input type="checkbox" id="uppercase" name="uppercase" value="true">
+                                    <span class="slider round"></span>
+                                </label>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -188,7 +197,7 @@
         </form>
     </main>
     <footer class="footer">
-        <p>Version 1.5 (released 2024-04-13)</p>
+        <p>Version 2.0 (released 2024-05-08)</p>
         <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
