--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </section>
                 <section class="project">
                     <h2 class="projectName">Eurovision 2024</h2>
-                    <p class="projectDesc">Check out my ranknings for this years Eurovision Song Contest!</p>
+                    <p class="projectDesc">Check out my rankings for this years Eurovision Song Contest!</p>
                     <div class="projectStuff">
                     <iframe class="youtubeVideo" width="560" height="315" src="https://www.youtube.com/embed/Uto5mZV2R9M?si=yoiUxjK-7FC3PnBi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
