--- a/experiences.html
+++ b/experiences.html
@@ -152,6 +152,4 @@
         <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
-</body>
-
-</html>
+</body></html>
