--- a/settings.html
+++ b/settings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="settingsPage">
 
 <head>
     <meta charset="utf-8">
@@ -195,4 +195,4 @@
         <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
         <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
-</body>
+</body></html>
