--- a/sv/projects.html
+++ b/sv/projects.html
@@ -167,6 +167,4 @@
         <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
         <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
-</body>
-
-</html>
+</body></html>
