--- a/sv/settings.html
+++ b/sv/settings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="sv" id="settingsPage">
 
 <head>
     <meta charset="utf-8">
@@ -189,4 +189,4 @@
         <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
         <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
-</body>
+</body></html>
